Fix alignment classes Fix #37

--- a/style.css
+++ b/style.css
@@ -296,11 +296,24 @@ ul.nav li.dropdown:hover ul.dropdown-menu{
 }
 
 /* Alignment classes */
+.alignnone,
+.aligncenter{
+	margin-bottom:1em;
+}
+.alignnone{
+}
+.alignleft{
+	float:left;
+	margin-right:1em;
+}
 .aligncenter{
 	display:block;
 	margin-left:auto;
 	margin-right:auto;
-	margin-bottom:1em;
+}
+.alignright{
+	float:right;
+	margin-left:1em;
 }
 
 /* Jetpack Tiled Gallery */
